--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
 	},
 	"scripts": {
 		"playground:dev": "pnpm --filter playground dev",
-		"changeset": "changeset",
-		"release": "node scripts/release.mjs",
 		"lint": "biome check .",
 		"lint:fix": "biome check --apply ."
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.5.3",
-		"@changesets/cli": "^2.27.1"
+		"@biomejs/biome": "1.5.3"
 	}
 }
