--- a/package/package.json
+++ b/package/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "package-name",
+  "name": "@adammatthiesen/astro-commercejs",
   "version": "0.0.0",
-  "description": "TODO:",
+  "description": "An Astro Integration to bring the CommerceJS SDK into Astro snap in package.",
   "author": {
-    "email": "TODO:",
-    "name": "TODO:",
-    "url": "TODO:"
+    "email": "adam@matthiesen.xyz",
+    "name": "Adam Matthiesen",
+    "url": "https://matthiesen.xyz"
   },
   "license": "MIT",
   "keywords": [
@@ -13,9 +13,9 @@
     "astro-component",
     "withastro",
     "astro",
-    "TODO:"
+    "commercejs"
   ],
-  "homepage": "TODO:",
+  "homepage": "https://github.com/adammatthiesen/astro-commercejs",
   "publishConfig": {
     "access": "public"
   },
@@ -29,6 +29,6 @@
     "astro": "^4.0.0"
   },
   "dependencies": {
-    "astro-integration-kit": "^0.0.12"
+    "astro-integration-kit": "0.0.12"
   }
 }
