--- a/playground/package.json
+++ b/playground/package.json
@@ -11,10 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.3.2",
-    "package-name": "workspace:*",
-    "tailwindcss": "^3.4.1"
+    "@adammatthiesen/astro-commercejs": "workspace:*"
   },
   "devDependencies": {
     "@astrojs/check": "^0.4.1",
