--- a/playground/package.json
+++ b/playground/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.5.1",
+    "@adammatthiesen/astro-commercejs": "workspace:*",
     "@types/node": "^20.11.17",
     "typescript": "^5.3.3"
   }
